ags (1.2.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented async message AgsConnection:data-object and AgsAudioConnection:mapped-line
	* implemented ags_audio_disconnect()
	* improved thread-safety to AgsLine:channel and AgsEffectLine:channel properties
	* TODO:JK: improved thread-safety all audio tasks
	* TODO:JK: improved tasks which need to lock audio
	* fixed change soundcard task since data-object was resetted for all connections

ags (1.2.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed remaining launch callback of AgsTask while destroy AgsMachine
	* minor-fixes

ags (1.2.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsNotationEditor and AgsNotationEdit
	* replaced AgsEditor by AgsNotationEditor and supporting segmented notation
	* replaced AgsNoteEdit and AgsPatternEdit by AgsNotationEdit
	* implemented AgsMessageDelivery and AgsMessageQueue
	* implemented messages of AgsAudio ::set-audio-channels, ::set-pads and ::done
	* implemented messages of AgsChannel ::add-effect, ::remove-effect and ::done
	* implemented AgsPiano and AgsScrolledPiano
	* implemented AgsDevin
	* implemented AgsJackDevin
	* implemented AgsPulseDevin
	* refactored direct callbacks to UI by replacing with messages
	* refactored ::set-audio-channels and ::set-pads of AgsAudio callbacks to be thread-safe
	* disabled AgsGuiThread synchronization with AgsTaskThread
	* extended AgsJackServer and AgsJackClient to support AgsJackDevin
	* extended AgsPulseServer, AgsPulseClient and AgsPulsePort to support AgsPulseDevin
	* extended AgsSwitchBufferFlag and AgsClearBuffer to support AgsDevin, AgsJackDevin and AgsPulseDevin
	* refactored AgsNotebook to be generic and move to libags-gui
	* improved ags-play-notation to support segmented notation
	* improved ags-record-midi to support segmented notation
	* improved ags-route-dssi to support segmented notation
	* improved ags-route-lv2 to support segmented notation